# mcp-training

./: .gitignore  CLAUDE.md  pyproject.toml
data/characters/: setsuna.json  setsuna.json.bak
src/: main_test.py  server.py  utils.py
src/decorators/: repo_error_handling.py
src/logs/: logging_config.py
src/mcp_training/: server.py
src/mcp_training/commons/repository/: data_repository.py  path_finder.py
src/mcp_training/commons/service/: initialization_order.py  service_status.py  shutdown_order.py
src/mcp_training/core/service/: managed_service.py
src/mcp_training/decorators/: repo_error_handling.py
src/mcp_training/logs/: logging_config.py
src/mcp_training/main_tests/: repo_test.py
src/mcp_training/models/: characters.py
src/models/: enemies.py  items.py
